# cart/internal/api/grpc/controller/cart.go
@@ -12,28 +12,6 @@ import (
 	"google.golang.org/grpc/status"
 )
 
-func GetCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.GetCartRequest) (*model.Cart, error) {
-	if req == nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
-	}
-
-	id, err := uuid.Parse(req.CartId)
-	if err != nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid id: %s", err)
-	}
-
-	cart, err := cartUsecase.GetCart(ctx, id)
-	if err != nil {
-		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
-	}
-
-	if cart == nil {
-		return nil, status.Errorf(codes.NotFound, "Cart not found")
-	}
-
-	return cart, nil
-}
-
 func GetUserCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.GetUserCartRequest) (*model.Cart, error) {
 	if req == nil {
 		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
@@ -56,59 +34,58 @@ func GetUserCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbC
 	return cart, nil
 }
 
-func CreateCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.CreateCartRequest) error {
+func CreateCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.CreateCartRequest) (*model.Cart, error) {
 	if req == nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid request")
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
 	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
 	}
 
 	cart := model.Cart{
-		ID:        uuid.New(),
 		UserID:    userID,
 		CreatedAt: time.Now(),
 		UpdatedAt: time.Now(),
 	}
 
 	if err = cartUsecase.CreateCart(ctx, cart); err != nil {
-		return status.Errorf(codes.Internal, "Internal error: %s", err)
+		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
 	}
 
-	return nil
+	return &cart, nil
 }
 
-func CreateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.CreateCartlineRequest) error {
+func CreateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.CreateCartlineRequest) (*model.CartLine, error) {
 	if req == nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid request")
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
-	cartID, err := uuid.Parse(req.CartId)
+	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid cart id: %s", err)
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
 	}
 
 	productID, err := uuid.Parse(req.ProductId)
 	if err != nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
 	}
 
 	cartline := model.CartLine{
-		ID:        uuid.New(),
-		CartID:    cartID,
+		UserID:    userID,
 		ProductID: productID,
+		Name:      req.Name,
 		Quantity:  1,
 		CreatedAt: time.Now(),
 		UpdatedAt: time.Now(),
 	}
 
 	if err = cartUsecase.CreateCartline(ctx, cartline); err != nil {
-		return status.Errorf(codes.Internal, "Internal error: %s", err)
+		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
 	}
 
-	return nil
+	return &cartline, nil
 }
 
 func UpdateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.UpdateCartlineRequest) (*model.Cart, error) {
@@ -116,13 +93,20 @@ func UpdateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *
 		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
-	cartID, err := uuid.Parse(req.CartId)
+	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return nil, status.Errorf(codes.InvalidArgument, "Invalid cart id: %s", err)
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
+	}
+
+	productID, err := uuid.Parse(req.ProductId)
+	if err != nil {
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
 	}
 
 	cartline := model.CartLine{
-		CartID:    cartID,
+		UserID:    userID,
+		ProductID: productID,
+		Name:      req.Name,
 		Quantity:  req.Quantity,
 		UpdatedAt: time.Now(),
 	}
@@ -130,6 +114,10 @@ func UpdateCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *
 	cart, err := cartUsecase.UpdateCartline(ctx, cartline)
 	if err != nil {
 		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
+	}
+
+	if cart == nil {
+		return nil, status.Errorf(codes.NotFound, "Cart not found")
 	}
 
 	return cart, nil
@@ -140,48 +128,68 @@ func DeleteCart(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCa
 		return status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
-	id, err := uuid.Parse(req.CartId)
+	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid id: %s", err)
+		return status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
 	}
 
-	if err := cartUsecase.DeleteCart(ctx, id); err != nil {
+	if err := cartUsecase.DeleteCart(ctx, userID); err != nil {
 		return status.Errorf(codes.Internal, "Internal error: %s", err)
 	}
 
 	return nil
 }
 
-func DeleteCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.DeleteCartlineRequest) error {
+func DeleteCartline(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.DeleteCartlineRequest) (*model.Cart, error) {
 	if req == nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid request")
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
-	id, err := uuid.Parse(req.CartlineId)
+	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid cartline id: %s", err)
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid user id: %s", err)
 	}
 
-	if err := cartUsecase.DeleteCartline(ctx, id); err != nil {
-		return status.Errorf(codes.Internal, "Internal error: %s", err)
+	productID, err := uuid.Parse(req.ProductId)
+	if err != nil {
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid product id: %s", err)
 	}
 
-	return nil
+	cartline := model.CartLine{
+		UserID:    userID,
+		ProductID: productID,
+	}
+
+	cart, err := cartUsecase.DeleteCartline(ctx, cartline)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
+	}
+
+	if cart == nil {
+		return nil, status.Errorf(codes.NotFound, "Cart not found")
+	}
+
+	return cart, nil
 }
 
-func DeleteCartCartlines(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.DeleteCartCartlinesRequest) error {
+func DeleteCartCartlines(ctx context.Context, cartUsecase *usecase.CartUsecase, req *pbCart.DeleteCartCartlinesRequest) (*model.Cart, error) {
 	if req == nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid request")
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid request")
 	}
 
-	cartID, err := uuid.Parse(req.CartId)
+	userID, err := uuid.Parse(req.UserId)
 	if err != nil {
-		return status.Errorf(codes.InvalidArgument, "Invalid cart id: %s", err)
+		return nil, status.Errorf(codes.InvalidArgument, "Invalid cart id: %s", err)
 	}
 
-	if err := cartUsecase.DeleteCartCartlines(ctx, cartID); err != nil {
-		return status.Errorf(codes.Internal, "Internal error: %s", err)
+	cart, err := cartUsecase.DeleteCartCartlines(ctx, userID)
+	if err != nil {
+		return nil, status.Errorf(codes.Internal, "Internal error: %s", err)
 	}
 
-	return nil
+	if cart == nil {
+		return nil, status.Errorf(codes.NotFound, "Cart not found")
+	}
+
+	return cart, nil
 }
