# cart/internal/api/grpc/handler/cart.go
@@ -23,16 +23,7 @@ func NewCartRoutes(cartUsecase *usecase.CartUsecase, logger *logger.Logger) *car
 	}
 }
 
-func (router *cartRoutes) GetCart(ctx context.Context, req *pbCart.GetCartRequest) (*pbCart.CartModel, error) {
-	cart, err := controller.GetCart(ctx, router.cartUsecase, req)
-	if err != nil {
-		return nil, err
-	}
-
-	return cart.ToProto(), nil
-}
-
-func (router *cartRoutes) GetUserCart(ctx context.Context, req *pbCart.GetUserCartRequest) (*pbCart.CartModel, error) {
+func (router *cartRoutes) GetUserCart(ctx context.Context, req *pbCart.GetUserCartRequest) (*pbCart.CartResponse, error) {
 	cart, err := controller.GetUserCart(ctx, router.cartUsecase, req)
 	if err != nil {
 		return nil, err
@@ -41,23 +32,25 @@ func (router *cartRoutes) GetUserCart(ctx context.Context, req *pbCart.GetUserCa
 	return cart.ToProto(), nil
 }
 
-func (router *cartRoutes) CreateCart(ctx context.Context, req *pbCart.CreateCartRequest) (*pbCart.CreateCartResponse, error) {
-	if err := controller.CreateCart(ctx, router.cartUsecase, req); err != nil {
+func (router *cartRoutes) CreateCart(ctx context.Context, req *pbCart.CreateCartRequest) (*pbCart.CartResponse, error) {
+	cart, err := controller.CreateCart(ctx, router.cartUsecase, req)
+	if err != nil {
 		return nil, err
 	}
 
-	return &pbCart.CreateCartResponse{}, nil
+	return cart.ToProto(), nil
 }
 
-func (router *cartRoutes) CreateCartline(ctx context.Context, req *pbCart.CreateCartlineRequest) (*pbCart.CreateCartlineResponse, error) {
-	if err := controller.CreateCartline(ctx, router.cartUsecase, req); err != nil {
+func (router *cartRoutes) CreateCartline(ctx context.Context, req *pbCart.CreateCartlineRequest) (*pbCart.CartlineResponse, error) {
+	cartline, err := controller.CreateCartline(ctx, router.cartUsecase, req)
+	if err != nil {
 		return nil, err
 	}
 
-	return &pbCart.CreateCartlineResponse{}, nil
+	return cartline.ToProto(), nil
 }
 
-func (router *cartRoutes) UpdateCartline(ctx context.Context, req *pbCart.UpdateCartlineRequest) (*pbCart.CartModel, error) {
+func (router *cartRoutes) UpdateCartline(ctx context.Context, req *pbCart.UpdateCartlineRequest) (*pbCart.CartResponse, error) {
 	cart, err := controller.UpdateCartline(ctx, router.cartUsecase, req)
 	if err != nil {
 		return nil, err
@@ -74,18 +67,20 @@ func (router *cartRoutes) DeleteCart(ctx context.Context, req *pbCart.DeleteCart
 	return &pbCart.DeleteCartResponse{}, nil
 }
 
-func (router *cartRoutes) DeleteCartline(ctx context.Context, req *pbCart.DeleteCartlineRequest) (*pbCart.DeleteCartlineResponse, error) {
-	if err := controller.DeleteCartline(ctx, router.cartUsecase, req); err != nil {
+func (router *cartRoutes) DeleteCartline(ctx context.Context, req *pbCart.DeleteCartlineRequest) (*pbCart.CartResponse, error) {
+	cart, err := controller.DeleteCartline(ctx, router.cartUsecase, req)
+	if err != nil {
 		return nil, err
 	}
 
-	return &pbCart.DeleteCartlineResponse{}, nil
+	return cart.ToProto(), nil
 }
 
-func (router *cartRoutes) DeleteCartCartlines(ctx context.Context, req *pbCart.DeleteCartCartlinesRequest) (*pbCart.DeleteCartCartlinesResponse, error) {
-	if err := controller.DeleteCartCartlines(ctx, router.cartUsecase, req); err != nil {
+func (router *cartRoutes) DeleteCartCartlines(ctx context.Context, req *pbCart.DeleteCartCartlinesRequest) (*pbCart.CartResponse, error) {
+	cart, err := controller.DeleteCartCartlines(ctx, router.cartUsecase, req)
+	if err != nil {
 		return nil, err
 	}
 
-	return &pbCart.DeleteCartCartlinesResponse{}, nil
+	return cart.ToProto(), nil
 }
